--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_11.cshtml
@@ -12,7 +12,10 @@
                 Tener y mantener actualizado el libro de operaciones de acuerdo a los lineamientos aprobados por el SERFOR.
             </td>
             <td style="border: 1px solid #000;">
-                El literal d) numeral 43.1 artículo 43 del RGF.
+                El literal d) numeral 43.1 artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_11" href="#_foot_infraccion_11" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS
