--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
@@ -12,7 +12,10 @@
                 Cumplir con la implementación de las medidas correctivas y/o mandatos que se emitan como resultado de las acciones de control, supervisión y/o fiscalización ejecutadas por la autoridad competente, según corresponda.
             </td>
             <td style="border: 1px solid #000;">
-                El literal u) numeral 43.1 artículo 43 del RGF.
+                El literal u) numeral 43.1 artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_13" href="#_foot_infraccion_13" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 13 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS
