--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_16.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_16.cshtml
@@ -12,7 +12,10 @@
                 Demostrar el origen legal de los productos aprovechados, así como movilizar los frutos, productos y subproductos con los documentos autorizados para el transporte.
             </td>
             <td style="border: 1px solid #000;">
-                Literales k) y r) del numeral 43.1 del artículo 43 del RGF.
+                Literales k) y r) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_16" href="#_foot_infraccion_16" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 16 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
