--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_19.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_19.cshtml
@@ -12,7 +12,10 @@
                 Cumplir con la implementación del plan de manejo aprobado.
             </td>
             <td style="border: 1px solid #000;">
-                Literal a) del numeral 43.1 del artículo 43 del RGF.
+                Literal a) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_19" href="#_foot_infraccion_19" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 19 del Cuadro de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre del Anexo 1 del RISMFFS.
