--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
@@ -12,7 +12,13 @@
                 El/la concesionario/a no cumplió con la presentación del (precisar el tipo de informe de ejecución y el periodo), dentro del plazo establecido en el RGF.
             </td>
             <td style="border: 1px solid #000;">
-                Literal b) del numeral 43.1 del artículo 43, concordado con el artículo 66 del RGF
+                Literal b) del numeral 43.1 del artículo 43
+                <a style="mso-footnote-id: foot_infraccion_2_1" href="#_foot_infraccion_2_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>, concordado con el artículo 66
+                <a style="mso-footnote-id: foot_infraccion_2_2" href="#_foot_infraccion_2_2" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a> del RGF
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 2 del Anexo 1 del RISMFFS.<br /><br />
