--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_29.cshtml
@@ -12,7 +12,10 @@
                 Contar con el regente forestal, para la implementación del plan de manejo, y comunicar a la ARFFS y al SERFOR la designación o el cambio del mismo.
             </td>
             <td style="border: 1px solid #000;">
-                Literal m) del numeral 43.1 del artículo 43 del RGF.
+                Literal m) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_29" href="#_foot_infraccion_29" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 29 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS
