--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_32.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_32.cshtml
@@ -12,7 +12,10 @@
                 Presentar el plan de manejo y cumplir con su implementación luego de ser aprobado.
             </td>
             <td style="border: 1px solid #000;">
-                Literal a) del numeral 43.1 del artículo 43 del RGF .
+                Literal a) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_32" href="#_foot_infraccion_32" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 32 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
