--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
@@ -13,7 +13,10 @@
                 Cumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados
             </td>
             <td style="border: 1px solid #000;">
-                Literal a) y k) del numeral 43.1 del artículo 43 del RGF.
+                Literal a) y k) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_b" href="#_foot_infraccion_b" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Literal b) del artículo 153 de la LFFS, concordado con el literal b) del artículo 44 del RGF.
@@ -67,7 +70,11 @@
                     Conforme se ha venido desarrollando en el presente informe, se ha acreditado que la extracción y movilización de XX.XXX m3 (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), provino de árboles distintos a los que formaron parte del censo forestal, quedando demostrado que se ha realizado un aprovechamiento sin considerar los criterios de sostenibilidad e incumpliendo lo establecido en los instrumentos de gestión.
                 </li>
                 <li>
-                    Es pertinente acotar que la correcta implementación del/la concesionario/a instrumentos de gestión aprobados constituye una obligación fundamental del titular, puesto que dichos instrumentos permiten controlar y planificar el aprovechamiento racional de los recursos forestales que el Estado le ha otorgado, a efectos de procurar el aprovechamiento sostenible del recurso (manejo racional del recurso teniendo en cuenta su capacidad de renovación), de conformidad al artículo 28 de la Ley N° 26821, Ley Orgánica para el Aprovechamiento Sostenible de los Recursos Naturales.
+                    Es pertinente acotar que la correcta implementación del/la concesionario/a instrumentos de gestión aprobados constituye una obligación fundamental del titular, puesto que dichos instrumentos permiten controlar y planificar el aprovechamiento racional de los recursos forestales que el Estado le ha otorgado, a efectos de procurar el aprovechamiento sostenible del recurso (manejo racional del recurso teniendo en cuenta su capacidad de renovación), 
+                    de conformidad al artículo 28
+                    <a style="mso-footnote-id: foot_infraccion_b_1" href="#_foot_infraccion_b_1" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a> de la Ley N° 26821, Ley Orgánica para el Aprovechamiento Sostenible de los Recursos Naturales.
                 </li>
                 <li>
                     En esa línea de ideas, las acciones atribuidas al/la concesionario/a además de constituir infracciones al RGF y configurar una causal de caducidad del título habilitante (por la extracción o movilización de recursos forestales no autorizados), configuran además una afectación a la cobertura boscosa que conforma el Patrimonio Nacional Forestal.
