--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_e.cshtml
@@ -12,7 +12,10 @@
                 Cumplir con el pago por derecho de aprovechamiento, de acuerdo al título habilitante.
             </td>
             <td style="border: 1px solid #000;">
-                Literal c) del numeral 43.1 del artículo 43 y el artículo 114 del RGF; concordado con el numeral XX de la Cláusula XXXXXX del contrato de concesión.
+                Literal c) del numeral 43.1 del artículo 43 y el artículo 114 del RGF
+                <a style="mso-footnote-id: foot_infraccion_e" href="#_foot_infraccion_e" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>; concordado con el numeral XX de la Cláusula XXXXXX del contrato de concesión.
             </td>
             <td style="border: 1px solid #000;">
                 Literal e) del artículo 153 de la LFFS, concordado con el literal e) del artículo 44 RGF y con el numeral XX de la Cláusula XXXXX del contrato de concesión.
