--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_1.cshtml
@@ -12,7 +12,10 @@
                 El/la concesionario/a no cumplió con establecer y mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante.
             </td>
             <td style="border: 1px solid #000;">
-                Literal t) del numeral 43.1 del artículo 43 del RGF.
+                Literal t) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_1" href="#_foot_infraccion_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 1 del Anexo 1 del RISMFFS<br /><br />
