--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_10.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_10.cshtml
@@ -12,7 +12,10 @@
                 Cumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados.
             </td>
             <td style="border: 1px solid #000;">
-                Literal a) y k) del numeral 43.1 del artículo 43 del RGF.
+                Literal a) y k) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_10" href="#_foot_infraccion_10" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 10 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS<br /><br />
